<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:orientation="vertical"
		android:gravity="center_horizontal" >

		<com.google.android.gms.ads.AdView
			android:id="@+id/adView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_alignParentBottom="true"
			ads:adSize="BANNER"
			ads:adUnitId="@string/banner_ad_unit_id">
		</com.google.android.gms.ads.AdView>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/script" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="false" 
			android:cursorVisible="false" 
			android:focusable="false" 
			android:focusableInTouchMode="false"
			android:background="@color/code"
			android:text="@string/jstag" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="false" 
			android:cursorVisible="false" 
			android:focusable="false" 
			android:focusableInTouchMode="false"
			android:background="@color/code"
			android:text="@string/jslink" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/learnjs" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/background" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="false" 
			android:cursorVisible="false" 
			android:focusable="false" 
			android:focusableInTouchMode="false"
			android:background="@color/code"
			android:text="@string/picture" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/backgroundcolor" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="false" 
			android:cursorVisible="false" 
			android:focusable="false" 
			android:focusableInTouchMode="false"
			android:background="@color/code"
			android:text="@string/color" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/font" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="false" 
			android:cursorVisible="false" 
			android:focusable="false" 
			android:focusableInTouchMode="false"
			android:background="@color/code"
			android:text="@string/fontag" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="false" 
			android:cursorVisible="false" 
			android:focusable="false" 
			android:focusableInTouchMode="false"
			android:background="@color/code"
			android:text="@string/fonttag" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/divider" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="false" 
			android:cursorVisible="false" 
			android:focusable="false" 
			android:focusableInTouchMode="false"
			android:background="@color/code"
			android:text="@string/div" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/table" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@color/code"
			android:orientation="vertical"
			android:gravity="left">

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/tablecode1" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/tablecode2" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/tablecode3" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/tablecode4" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/tablecode5" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/tablecode6" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/tablecode7" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/tablecode8" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/tablecode9" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/tablecode10" />
			
		</LinearLayout>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/iframe" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="false" 
			android:cursorVisible="false" 
			android:focusable="false" 
			android:focusableInTouchMode="false"
			android:background="@color/code"
			android:text="@string/iframetag" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/audio" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@color/code"
			android:orientation="vertical"
			android:gravity="left">

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/audiotag1" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/audiotag2" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/audiotag3" />

		</LinearLayout>
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/video" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@color/code"
			android:orientation="vertical"
			android:gravity="left">

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/videotag1" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/videotag2" />

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/videotag3" />

		</LinearLayout>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/youtube" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@color/code"
			android:orientation="vertical"
			android:gravity="left">

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:clickable="false" 
				android:cursorVisible="false" 
				android:focusable="false" 
				android:focusableInTouchMode="false"
				android:background="@color/code"
				android:text="@string/youtube1" />

		</LinearLayout>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/quotes" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="false" 
			android:cursorVisible="false" 
			android:focusable="false" 
			android:focusableInTouchMode="false"
			android:background="@color/code"
			android:text="@string/q" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/blockquotes" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="false" 
			android:cursorVisible="false" 
			android:focusable="false" 
			android:focusableInTouchMode="false"
			android:background="@color/code"
			android:text="@string/blockquote" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:padding="10dp"
			android:textSize="25sp"
			android:text="@string/finishadvance" />

	</LinearLayout>

</ScrollView>
