<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:padding="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:gravity="center_horizontal"
		android:padding="5dp"
		android:textSize="25sp"
        android:text="@string/hello" />

	<com.google.android.gms.ads.AdView
		android:id="@+id/adView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		ads:adSize="BANNER"
		ads:adUnitId="@string/banner_ad_unit_id">
	</com.google.android.gms.ads.AdView>


	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:gravity="center" >

		<Button
			android:layout_width="250dp"
			android:layout_height="60dp"
			android:layout_margin="5dp"
			android:onClick="whatis"
			android:text="@string/what" />
	
		<Button
			android:layout_width="250dp"
			android:layout_height="60dp"
			android:layout_margin="5dp"
			android:onClick="basics"
			android:text="@string/basics" />

		<Button
			android:layout_width="250dp"
			android:layout_height="60dp"
			android:layout_margin="5dp"
			android:onClick="difficult"
			android:text="@string/difficult" />

		<Button
			android:layout_width="250dp"
			android:layout_height="60dp"
			android:layout_margin="5dp"
			android:onClick="styling"
			android:text="@string/styling" />

		<Button
			android:layout_width="250dp"
			android:layout_height="60dp"
			android:layout_margin="5dp"
			android:onClick="tools"
			android:text="@string/tools" />
	
	</LinearLayout>
</LinearLayout>
